# factorResearch

./: .gitignore  README.md  main.py  pyproject.toml  test.py
factorresearch/: __init__.py  expr.py
plotting/: __init__.py  plots.py
research/: __init__.py  evaluation.py  expr.py  group_backtest.py  linearization.py  orthogonalization.py  preprocessing.py  utils.py
